--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-pdf": "^3.0.5",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-transition-group": "^2.4.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
